Bug 913867 - OdinMonkey: correct heap access index folding of bitwise-and of zero, r=luke